--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "wearetop",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -13,7 +13,9 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.8",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.14"
+  },
+  "devDependencies": {
     "typescript": "^5.6.3"
   }
 }
