--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
     "typescript": "^5.6.3"
   }
 }
