--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@fontsource/lato": "^5.1.0",
     "astro": "^4.16.8",
+    "astro-icon": "^1.1.2",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
