--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/lato": "^5.1.0",
     "astro": "^4.16.8",
     "astro-icon": "^1.1.2",
+    "cobe": "^0.6.3",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
