--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/svelte": "^6.0.2",
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource/lato": "^5.1.0",
+    "@number-flow/svelte": "^0.2.1",
     "astro": "^4.16.8",
     "astro-icon": "^1.1.2",
     "cobe": "^0.6.3",
+    "svelte": "^5.2.10",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
@@ -26,6 +29,6 @@
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   }
 }
