--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro-icon": "^1.1.2",
     "cobe": "^0.6.3",
     "svelte": "^5.2.10",
+    "svelte-sonner": "^0.3.28",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
