--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/svelte": "^7.0.5",
     "@fontsource/lato": "^5.1.0",
+    "@github/relative-time-element": "^4.4.5",
     "@number-flow/svelte": "^0.2.1",
     "@tailwindcss/vite": "^4.0.9",
     "astro": "^5.4.0",
