--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^5.4.0",
     "astro-icon": "^1.1.2",
     "cobe": "^0.6.3",
+    "gsap": "^3.12.7",
     "svelte": "^5.2.10",
     "svelte-sonner": "^0.3.28",
     "swiper": "^11.2.5",
